<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acknowledgements_dismiss">Dismiss</string>
    <string name="add_text">Add text</string>
    <string name="android_animations_lib_name">AndroidAnimations</string>
    <string name="app_name">MyTalkingPet</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom">Bottom</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="camera">Camera</string>
    <string name="cancelled">Cancelled</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chin">Chin</string>
    <string name="choose">Choose</string>
    <string name="com.crashlytics.android.build_id">03c9a60f-350a-4938-ae0a-68afb9b2bcf0</string>
    <string name="crop_image_activity_title" />
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="device_full">Your device is full. Please free up space and retry.</string>
    <string name="done">Done</string>
    <string name="error_message_camera_failed">"Failed to prepare storage for your picture. Sorry! Details

: %1$s."</string>
    <string name="error_message_camera_unavailable">"Your device doesn't seem to have a camera."</string>
    <string name="error_message_image_read_failed">"Failed to load your picture. Sorry! Details

: %1$s."</string>
    <string name="error_message_local_storage">"Failed to access local storage. Sorry! Details

: %1$s."</string>
    <string name="error_recording_limit">Sorry, recordings are limited to %d seconds.</string>
    <string name="error_title_camera_failed">Camera problem</string>
    <string name="error_title_camera_unavailable">Camera unavailable</string>
    <string name="error_title_generic">Whoops</string>
    <string name="error_title_image_read_failed">Image problem</string>
    <string name="error_title_local_storage">Storage problem</string>
    <string name="eye">Eye</string>
    <string name="head_movement">Head movement</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="mouth">Mouth</string>
    <string name="ok">OK</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="perm_grant_in_settings">You can do this under the Permissions section of the app settings.</string>
    <string name="perm_ignore">Ignore</string>
    <string name="perm_needed_explanation_audio">In order to record audio, you need to grant the Microphone permission.</string>
    <string name="perm_needed_explanation_camera">In order to take a photo, you need to grant the Storage permission.</string>
    <string name="perm_needed_explanation_video">In order to save a video, you need to grant the Storage permission.</string>
    <string name="perm_needed_title">Permission needed</string>
    <string name="perm_settings">Settings</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="play">Play</string>
    <string name="please_wait">Please wait…</string>
    <string name="pointy_ears">Pointy ears</string>
    <string name="rate_dialog_body">Recommend My Talking Pet to others by leaving a review in the Play store.</string>
    <string name="rate_dialog_dismiss">Dismiss</string>
    <string name="rate_dialog_no">No, send feedback</string>
    <string name="rate_dialog_title">Enjoying My Talking Pet?</string>
    <string name="rate_dialog_yes">Yes, rate it now</string>
    <string name="record">Record</string>
    <string name="save">Save/Share</string>
    <string name="saved_to_gallery">Video saved to gallery</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="stop">Stop</string>
    <string name="tone">Tone</string>
    <string name="top">Top</string>
    <string name="top_of_head">Top of Head</string>
</resources>
