<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/low_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/low" android:layout_alignParentTop="true" android:fontFamily="@font/montserrat_bold" android:layout_marginStart="15.0dip" android:layout_alignParentStart="true" />
    <TextView android:gravity="center_vertical" android:id="@id/head_movement_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/head_movement" android:layout_alignTop="@id/low_text_view" android:layout_alignBottom="@id/low_text_view" android:layout_alignParentTop="true" android:fontFamily="@font/montserrat_bold" android:layout_marginEnd="15.0dip" android:layout_alignParentEnd="true" />
    <RelativeLayout android:gravity="center" android:id="@id/head_movement_switch_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/head_movement_text_view" android:layout_marginEnd="15.0dip" android:layout_alignStart="@id/head_movement_text_view" android:layout_alignEnd="@id/head_movement_text_view">
        <android.support.v7.widget.SwitchCompat android:id="@id/head_movement_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:layout_centerInParent="true" />
    </RelativeLayout>
    <SeekBar android:id="@id/pitch_seek_bar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:progress="20" android:secondaryProgress="20" android:layout_below="@id/low_text_view" android:layout_alignTop="@id/head_movement_switch_layout" android:layout_alignBottom="@id/head_movement_switch_layout" android:layout_toStartOf="@id/head_movement_switch_layout" android:layout_alignParentStart="true" app:layout_marginRightPercent="10.000002%" />
    <TextView android:id="@id/high_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/high" android:layout_alignParentTop="true" android:fontFamily="@font/montserrat_bold" android:layout_marginEnd="15.0dip" android:layout_alignEnd="@id/pitch_seek_bar" />
    <TextView android:gravity="center_horizontal" android:id="@id/tone_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tone" android:layout_alignTop="@id/low_text_view" android:layout_alignBottom="@id/low_text_view" android:layout_alignParentTop="true" android:fontFamily="@font/montserrat_bold" android:layout_toStartOf="@id/high_text_view" android:layout_toEndOf="@id/low_text_view" />
    <View android:id="@id/divider" android:background="@color/transparent_white2" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_marginTop="10.0dip" android:layout_below="@id/head_movement_switch_layout" />
    <info.wobamedia.mytalkingpet.ui.TextAndImageButton android:theme="@style/ButtonWithBrightRipple" android:textColor="@color/colorPrimaryDark" android:id="@id/record_button" android:background="?selectableItemBackground" android:src="@drawable/title_screen_choose" android:tint="@color/colorAccent" android:text="@string/record" android:layout_below="@id/divider" app:layout_aspectRatio="150.0%" app:layout_widthPercent="33.329998%" />
    <View android:background="@color/transparent_white2" android:layout_width="2.0dip" android:layout_alignTop="@id/record_button" android:layout_alignBottom="@id/record_button" android:layout_toEndOf="@id/record_button" />
    <info.wobamedia.mytalkingpet.ui.TextAndImageButton android:theme="@style/ButtonWithBrightRipple" android:textColor="@color/colorPrimaryDark" android:id="@id/play_button" android:background="?selectableItemBackground" android:src="@drawable/title_screen_choose" android:tint="@color/colorAccent" android:text="@string/play" android:layout_below="@id/divider" android:layout_toEndOf="@id/record_button" app:layout_aspectRatio="150.0%" app:layout_marginRightPercent="0.49999952%" app:layout_widthPercent="33.329998%" />
    <View android:background="@color/transparent_white2" android:layout_width="2.0dip" android:layout_alignTop="@id/play_button" android:layout_alignBottom="@id/play_button" android:layout_toEndOf="@id/play_button" />
    <info.wobamedia.mytalkingpet.ui.TextAndImageButton android:theme="@style/ButtonWithBrightRipple" android:textColor="@color/colorPrimaryDark" android:id="@id/share_button" android:background="?selectableItemBackground" android:src="@drawable/title_screen_choose" android:tint="@color/colorAccent" android:text="@string/save" android:layout_below="@id/divider" android:layout_toEndOf="@id/play_button" app:layout_aspectRatio="150.0%" app:layout_widthPercent="33.329998%" />
    <Space android:id="@id/margin_view" android:layout_alignTop="@id/record_button" android:layout_alignStart="@id/record_button" app:layout_aspectRatio="100.0%" app:layout_widthPercent="1.9999981%" />
    <View android:id="@id/recording_symbol_image_view" android:background="@drawable/recording_animation" android:layout_below="@id/margin_view" android:layout_toEndOf="@id/margin_view" app:layout_aspectRatio="100.0%" app:layout_widthPercent="4.999995%" />
</merge>